--- a/client/src/components/views/AdminPanel/AdminPanel.module.css
+++ b/client/src/components/views/AdminPanel/AdminPanel.module.css
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: row;
   padding: 4% 0;
-  color: black;
 }
 
 .message{
@@ -18,19 +17,28 @@
 
 .h1{
   margin: 12%;
-  color: black;
-  height: 20px;
   font-size: 10px;
-
+  transition: all 0.5s;
 }
 
+.h1:hover{
+  scale: 1.1;
 
+  color: rgb(0, 162, 255);
+}
 
 .buton{
+  border: 2px solid rgb(8, 156, 137);
+  display: flex;
+  justify-content:center;
+  text-align: center;
+  align-items: center;
   width: 250px;
+  height: 60px;
   transition: all 0.5s;
 
 }
 .buton:hover{
-  width: 400px;
+  height: 60px;
+  cursor: pointer;
   }
