--- a/client/src/components/views/AdminPanel/Categories.module.css
+++ b/client/src/components/views/AdminPanel/Categories.module.css
@@ -1,19 +1,11 @@
-.container {
+.contain {
     color: aliceblue;
     background-color: rgba(0, 0, 0, 0.774);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    display: flex;  
     position: fixed;
-    justify-content: center;
-    justify-items: center;
-    align-items: center;
+  
     animation: blur-in 0.4s linear both;
-    flex-direction: column;
+    flex-direction: row;
   }
   @keyframes blur-in {
     0% {
@@ -31,7 +23,7 @@
     justify-items: center;
     align-items: center;
   }
-  
+ 
   .button{
     color: white;
   }
