--- a/client/src/components/bars/filterBar/FilterBar.module.css
+++ b/client/src/components/bars/filterBar/FilterBar.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-around;
   width: 100%;
-  height: 4%;
+  height: 7rem;
   z-index: 1;
   color: aliceblue;
   background-color: rgba(0, 0, 0, 0.672);
@@ -42,6 +42,51 @@
   background-clip: padding-box;
   animation: borderGradientAnimation1 infinite 2.5s;
 } */
+
+.optionSort {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 15%;
+    height: 5rem;
+    gap: 1rem;
+}
+
+.optionSort select {
+    height: 3rem;
+}
+
+.optionFilter {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: space-evenly;
+    width: 40%;
+    height: 7rem;
+    gap: 1rem;
+}
+
+
+.optionFilter span {
+    display: flex;
+    justify-content: center;
+    gap: 5vw;
+    height: 3rem;
+}
+
+.optionFilter select {
+    height: 100%;
+    width: 50%;
+}
+
+.component label {
+    text-align: center;
+}
+
+.component button {
+    min-height: 4rem;
+    width: 10%;
+}
 
 @keyframes borderGradientAnimation1 {
 0% {
