--- a/client/src/components/datos/Bag/Bag.module.css
+++ b/client/src/components/datos/Bag/Bag.module.css
@@ -61,6 +61,12 @@
     align-items: center;
 }
 
+.highlight {
+    /* border: 1px solid red; */
+    box-shadow: rgba(255, 0, 0, 0.551) 1.95px 1.95px 2.6px !important;
+}
+
+
 .item {
   display: flex;
   flex-direction: column;
@@ -87,6 +93,31 @@
   .minusPlus-dark:hover {
     background-color: #FFFF33;
     color: black;
+  }
+  .binBox {
+    width: 2rem;
+    height: 2rem;
+    background-color: transparent;
+    /* border: 1px solid red; */
+    border: none;
+    border-radius: 10px;
+    transition: transform 0.2s ease;
+    
+  }
+  .binBox:hover {
+    animation: shake 0.5s infinite;
+    cursor: pointer;
+  }
+  .bin {
+    height: 1.5rem;
+    width: 1.5rem;
+    fill: red;
+  }
+  @keyframes shake {
+    0%, 100% { transform: rotate(0deg); }
+    25% { transform: rotate(-10deg); }
+    50% { transform: rotate(10deg); }
+    75% { transform: rotate(-10deg); }
   }
 
   .item p {
