--- a/client/src/components/datos/PagoMetamask/ConexionMetamask.module.css
+++ b/client/src/components/datos/PagoMetamask/ConexionMetamask.module.css
@@ -22,14 +22,14 @@
     height: 30px;
     border-radius: 100%;
     transition: transform 0.5s;
-    transform: translate(0%, -50%);
+    /* transform: translate(0%, -50%); */
 
     /* margin-bottom: -90%; */
 }
 
 .img:hover{
     cursor: pointer;
-    transform: scale(2.1);
+    transform: scale(1.5);
 
 }
 
