--- a/client/src/components/bars/navBar/navBar.module.css
+++ b/client/src/components/bars/navBar/navBar.module.css
@@ -192,6 +192,9 @@
     .subscription-responsive {
         display: none;
     }
+    .admin-responsive {
+        display: none;
+    }
     .barsButton:hover {
         transform:scale(1.4);
     }
@@ -219,6 +222,9 @@
     .subscription-responsive {
         display: block;
     }
+    .admin-responsive {
+        display: block;
+    }
     .bolsita {
         order: 1;
     }
@@ -233,6 +239,9 @@
     }
     .barsButton {
         order: 5;
+    }
+    .admin {
+        display: none;
     }
 }
 
