--- a/client/src/components/datos/Bag/Bag.module.css
+++ b/client/src/components/datos/Bag/Bag.module.css
@@ -101,8 +101,7 @@
       /* border: 1px solid red; */
       border: none;
       border-radius: 10px;
-      transition: transform 0.2s ease;
-      
+      transition: transform 0.2s ease; 
     }
     .binBox:hover {
       animation: shake 0.5s infinite;
@@ -141,8 +140,24 @@
         border-color: rgba(248, 248, 248, 0.658);
       }
   
-  /* @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 700px) {
       .shopbag {
-          height: 100vh;
-      }
-  } */
+          height: 70vh;
+          width: 100%;
+          bottom: 0;
+          top: unset;
+          transition: height 0.3s ease;
+          animation: scale-up-vertical-up 0.4s;
+        } @keyframes scale-up-vertical-up {
+          0% {
+            transform: scaleY(0);
+            transform-origin: center bottom;
+            opacity: 0;
+          }
+          100% {
+            transform: scaleY(1);
+            transform-origin: bottom center;
+            opacity: 1;
+          }
+        }
+  }
