integracion firebase storage a adminpanel. no terminado

--- a/client/src/components/views/Cart/CartV2.module.css
+++ b/client/src/components/views/Cart/CartV2.module.css
@@ -24,6 +24,7 @@
     min-width: 280px;
   }
   .info {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
