funcionalidades solo para suscriptores

--- a/client/src/components/datos/Comments/Comments.module.css
+++ b/client/src/components/datos/Comments/Comments.module.css
@@ -41,3 +41,20 @@
   margin-top: 5px;
   color: gray;
 }
+
+.subscription {
+  text-align: center;
+}
+.link {
+  text-decoration: none;
+  color: rgb(200, 0, 0);
+  font-weight: 600;
+  font-size: 15px;
+  border-radius: 10px;
+  padding: 3px;
+  border: 1px solid rgb(200, 0, 0);
+}
+.link:hover {
+  color: white;
+  background-color: rgb(200,0,0);
+}
