--- a/client/src/components/datos/CoursesDetails/CourseDetails.module.css
+++ b/client/src/components/datos/CoursesDetails/CourseDetails.module.css
@@ -99,7 +99,7 @@ h4 {
     background-color: whitesmoke;
     border-radius: 10px;
     margin-bottom: 15px;
-    box-shadow: 1px 1px 5px rgba(128, 128, 128);
+    box-shadow: 1px 1px 5px -1px rgba(128, 128, 128);
 }
 .data span {
   display: flex;
@@ -177,11 +177,11 @@ h4 {
     margin-top: 0;
     border-radius: 10px;
     min-width: 300px;
-    box-shadow: 1px 1px 5px rgba(128, 128, 128);
+    box-shadow: 1px 1px 5px -1px rgba(128, 128, 128);
     animation: slide-in-left 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 .description-dark {
-  box-shadow: 1px 1px 5px rgb(156, 156, 156);
+  box-shadow: 1px 1px 5px -1px rgb(156, 156, 156);
   background-color: rgb(51, 51, 51);
 }
 @keyframes slide-in-left {
@@ -213,7 +213,7 @@ h4 {
     color: white;
     padding: 1%;
     border-radius: 5px;
-    box-shadow: 1px 1px 3px black;
+    box-shadow: 1px 1px 3px -1px black;
 }
 
 .comments {
@@ -225,4 +225,9 @@ h4 {
   position: absolute;
   margin-top: 10%;  
   animation:vibrate .5s linear both} @keyframes vibrate{0%{transform:translate(0)}20%{transform:translate(-2px,2px)}40%{transform:translate(-2px,-2px)}60%{transform:translate(2px,2px)}80%{transform:translate(2px,-2px)}100%{transform:translate(0)}
+}
+
+.link {
+  text-decoration: none;
+  color: black;
 }
