--- a/client/src/components/views/Profile/Profile.module.css
+++ b/client/src/components/views/Profile/Profile.module.css
@@ -21,12 +21,12 @@
     background-color: whitesmoke;
     border-radius: 15px;
     padding: 1%;
-    box-shadow: 1px 1px 5px rgba(128, 128, 128);
+    box-shadow: 1px 1px 5px -1px rgba(128, 128, 128);
 }
 .infoProfile-dark {
     
     background-color: rgb(51, 51, 51);
-    box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
+    box-shadow: inset 1px 1px 5px -1px rgba(128, 128, 128);
 }
 
 .profileContainer h2 {
@@ -59,12 +59,12 @@
     background-color: whitesmoke;
     width: 100%;
     height: 45px;
-    box-shadow: 1px 1px 5px rgba(128, 128, 128);
+    box-shadow: 1px 1px 5px -1px rgba(128, 128, 128);
 }
 .navBarProfile-dark {
     
     background-color: rgb(51, 51, 51);
-    box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
+    box-shadow: inset 1px 1px 5px -1px rgba(128, 128, 128);
 }
 
 .emptyTab {
@@ -75,14 +75,14 @@
     width: 100%;
     border-radius: 8px;
     background-color: whitesmoke;
-    box-shadow: 1px 1px 5px rgba(128, 128, 128);
+    box-shadow: 1px 1px 5px -1px rgba(128, 128, 128);
     height: 400px;
     color: gray;
 }
 .emptyTab-dark {
     
     background-color: rgb(51, 51, 51);
-    box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
+    box-shadow: inset 1px 1px 5px -1px rgba(128, 128, 128);
 }
 .emptyTab img {
     width: 150px;
@@ -202,14 +202,14 @@
     width: 100%;
     border-radius: 8px;
     background-color: whitesmoke;
-    box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
+    box-shadow: inset 1px 1px 5px -1px rgba(128, 128, 128);
     max-height: 400px;
     overflow-y: scroll;
 }
 .favorites-dark {
     
     background-color: rgb(51, 51, 51);
-    box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
+    box-shadow: inset 1px 1px 5px -1px rgba(128, 128, 128);
 }
 
 .favorite {
@@ -259,7 +259,7 @@
     width: 100%;
     border-radius: 8px;
     background-color: whitesmoke;
-    box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
+    box-shadow: inset 1px 1px 5px -1px rgba(128, 128, 128);
     height: 400px;
     overflow-y: scroll;
     gap: 10px;
@@ -267,7 +267,7 @@
 .reviews-dark {
     
     background-color: rgb(51, 51, 51);
-    box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
+    box-shadow: inset 1px 1px 5px -1px rgba(128, 128, 128);
 }
 
 .oldComment {
@@ -341,12 +341,33 @@
     width: 100%;
     border-radius: 8px;
     background-color: whitesmoke;
-    box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
+    box-shadow: inset 1px 1px 5px -1px rgba(128, 128, 128);
     height: 400px;
     overflow-y: scroll;
 }
 .cart-dark {
     
     background-color: rgb(51, 51, 51);
-    box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
+    box-shadow: inset 1px 1px 5px -1px rgba(128, 128, 128);
 }
+
+
+.subscription {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.link {
+    text-decoration: none;
+    color: rgb(200, 0, 0);
+    font-weight: 600;  
+    border-radius: 10px;
+    padding: 3px;
+    border: 1px solid rgb(200, 0, 0);
+    background-color: whitesmoke;
+  }
+  .link:hover {
+    color: white;
+    background-color: rgb(200,0,0);
+  }
