--- a/client/src/components/views/AdminPanel/Categories.module.css
+++ b/client/src/components/views/AdminPanel/Categories.module.css
@@ -1,29 +1,87 @@
 .contain {
-    color: aliceblue;
-    background-color: rgba(0, 0, 0, 0.774);
-    display: flex;  
-    position: fixed;
-  
-    animation: blur-in 0.4s linear both;
-    flex-direction: row;
-  }
-  @keyframes blur-in {
-    0% {
-      filter: blur(12px);
-      opacity: 0;
-    }
-    100% {
-      filter: blur(0);
-      opacity: 1;
-    }
-  }
-  .item {
-    display: flex;
-    justify-content: center;
-    justify-items: center;
-    align-items: center;
-  }
+  color: aliceblue;
  
-  .button{
-    color: white;
+  display: flex;  
+ 
+ 
+  width: 100%;
+  animation: blur-in 0.4s linear both;
+  flex-direction: row;
+}
+@keyframes blur-in {
+  0% {
+    filter: blur(12px);
+    opacity: 0;
   }
+  100% {
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+.item {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+}
+
+.button{
+  color: rgb(10, 10, 10);
+}
+.Table {
+  width: 100%;
+  margin-bottom: 1rem;
+  color: #212529;
+  border-collapse: collapse;
+}
+
+/* Estilos para el encabezado de la tabla */
+.Table thead th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #dee2e6;
+}
+
+/* Estilos para las celdas del cuerpo de la tabla */
+.Table tbody td {
+  vertical-align: middle;
+  border-bottom: 1px solid #dee2e6;
+}
+
+/* Estilos para las celdas del cuerpo de la tabla en la última fila */
+/* Si no quieres bordes en la última fila, puedes omitir este bloque */
+.Table tbody tr:last-child td {
+  border-bottom: none;
+}
+
+/* Estilos para las celdas del cuerpo de la tabla en la primera columna */
+.Table tbody td:first-child {
+  border-left: 1px solid #dee2e6;
+}
+
+/* Estilos para las celdas del cuerpo de la tabla en la última columna */
+.Table tbody td:last-child {
+  border-right: 1px solid #dee2e6;
+}
+
+/* Estilos para los botones dentro de las celdas de la tabla */
+.Table td button {
+  margin-right: 5px;
+  cursor: pointer;
+  background-color: #007bff;
+  border: none;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 4px;
+}
+
+/* Estilos para los botones de eliminar */
+/* Personaliza el color según tus preferencias */
+.Table td button.delete-button {
+  background-color: #dc3545;
+}
+
+/* Estilos para los botones de modificar */
+/* Personaliza el color según tus preferencias */
+.Table td button.modify-button {
+  background-color: #ffc107;
+}
