--- a/client/src/components/views/Profile/ProfileComponents/Favorites/Favorites.module.css
+++ b/client/src/components/views/Profile/ProfileComponents/Favorites/Favorites.module.css
@@ -45,6 +45,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 10px;
+    font-size: 15px;
 }
 .courseInfo p {
     font-weight: bold;
