--- a/client/src/components/datos/CoursesCard/CoursesCard.module.css
+++ b/client/src/components/datos/CoursesCard/CoursesCard.module.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-items: center;
-  margin:0 2% 2%;
+  /* margin:0 2% 2%; */
   justify-content: space-evenly;
 }
 
@@ -12,7 +12,8 @@
   align-items: center;
   background-color: rgba(0, 0, 0, 0.672);
   color: rgb(246, 251, 255);
-  animation:scale-up-horizontal-left 0.4s } @keyframes scale-up-horizontal-left{0%{transform:scaleX(.4);transform-origin:left center}100%{transform:scaleX(1);transform-origin:left center}}
+  /* animation:scale-up-horizontal-left 0.4s  */
+} @keyframes scale-up-horizontal-left{0%{transform:scaleX(.4);transform-origin:left center}100%{transform:scaleX(1);transform-origin:left center}}
   .paginado a {
     text-decoration: none;
     color: white;
