--- a/client/src/components/datos/CoursesDetails/CourseDetails.module.css
+++ b/client/src/components/datos/CoursesDetails/CourseDetails.module.css
@@ -22,13 +22,13 @@
 .title h1 {
     margin: 5px;
 }
-  
+  /* aqui */
 h3 {
     padding: 5px;
     margin: 2% 0 2% 0;
     background-color: rgb(0, 140, 158, 0.85);
     color: whitesmoke;
-}
+} 
 h4 {
   margin: 5px;
 }
