--- a/client/src/components/views/AdminPanel/Categories.module.css
+++ b/client/src/components/views/AdminPanel/Categories.module.css
@@ -1,12 +1,13 @@
 .contain {
-  color: aliceblue;
- 
-  display: flex;  
- 
- 
+  color: rgb(0, 0, 0);
+  display: flex;
   width: 100%;
+  justify-content:center ;
   animation: blur-in 0.4s linear both;
   flex-direction: row;
+  margin-left: 150%;
+  padding: 5%;
+  background-color: rgba(0, 0, 255, 0.31);
 }
 @keyframes blur-in {
   0% {
@@ -28,60 +29,32 @@
 .button{
   color: rgb(10, 10, 10);
 }
-.Table {
-  width: 100%;
-  margin-bottom: 1rem;
-  color: #212529;
-  border-collapse: collapse;
-}
-
-/* Estilos para el encabezado de la tabla */
-.Table thead th {
-  vertical-align: bottom;
-  border-bottom: 2px solid #dee2e6;
-}
-
-/* Estilos para las celdas del cuerpo de la tabla */
-.Table tbody td {
-  vertical-align: middle;
-  border-bottom: 1px solid #dee2e6;
-}
-
-/* Estilos para las celdas del cuerpo de la tabla en la última fila */
-/* Si no quieres bordes en la última fila, puedes omitir este bloque */
-.Table tbody tr:last-child td {
-  border-bottom: none;
-}
-
-/* Estilos para las celdas del cuerpo de la tabla en la primera columna */
-.Table tbody td:first-child {
-  border-left: 1px solid #dee2e6;
-}
-
-/* Estilos para las celdas del cuerpo de la tabla en la última columna */
-.Table tbody td:last-child {
-  border-right: 1px solid #dee2e6;
-}
-
-/* Estilos para los botones dentro de las celdas de la tabla */
-.Table td button {
-  margin-right: 5px;
-  cursor: pointer;
-  background-color: #007bff;
-  border: none;
-  color: white;
-  padding: 5px 10px;
-  border-radius: 4px;
-}
 
 /* Estilos para los botones de eliminar */
 /* Personaliza el color según tus preferencias */
-.Table td button.delete-button {
+.deleteButton {
   background-color: #dc3545;
+  width: 2rem;
+  height: 2rem;
+  background-color: transparent;
+  /* border: 1px solid red; */
+  border: none;
+  transition: transform 0.2s ease;
+  
+}
+.deleteButton:hover {
+  animation: shake 0.5s infinite;
+  cursor: pointer;
+}
+.bin {
+  height: 1.5rem;
+  width: 1.5rem;
+  fill: red;
+}
+@keyframes shake {
+  0%, 100% { transform: rotate(0deg); }
+  25% { transform: rotate(-10deg); }
+  50% { transform: rotate(10deg); }
+  75% { transform: rotate(-10deg); }
 }
 
-/* Estilos para los botones de modificar */
-/* Personaliza el color según tus preferencias */
-.Table td button.modify-button {
-  background-color: #ffc107;
-}
