--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,16 @@
 :root {
   --navBarHeight: 12vh;
-  /* --footerHeight: 14vh; */
   --footerHeight: calc(25vh + 80px);
+  /* --footerHeight: 14vh; */
   --paddingBottom: 16vh;
   --navFilterHeight: 10vh;
+  --azul: #0000ff;
+  --celeste: #00ffff;
+  --rojo: #ff0000;
+  --rosado: #ff00ff;
+  --violeta: #800080;
+  --turquesa: rgba(27, 149, 155, 0.822);
+  --morado: rgba(102, 51, 153, 0.658);
 }
 
 /*html {
