--- a/client/src/components/views/Shop/Shop.module.css
+++ b/client/src/components/views/Shop/Shop.module.css
@@ -253,3 +253,12 @@
         }
      }
  }
+
+
+ /* ----------- RESPONSIVE --------------- */
+
+ @media screen and (max-width: 750px) {
+    .component {
+        padding-bottom: 0;
+    }
+}
