--- a/client/src/components/views/AdminPanel/AdminPanel.module.css
+++ b/client/src/components/views/AdminPanel/AdminPanel.module.css
@@ -1,44 +1,58 @@
 .component {
-  width: 100%;
-  margin-top: var(--navBarHeight);
-  display: flex;
-  flex-direction: row;
-  padding: 4% 0;
+   padding-bottom: var(--footerHeight);
+   margin-top: var(--navBarHeight);
+   min-height: calc(100vh - var(--navBarHeight));    
+   position: absolute;
+   width: 100%;
+   display: flex;
+   flex-direction: column; 
+   box-sizing: border-box;
 }
 
-.message{
-  position:sticky;
-  top:12%;
-  width:100%;
-  height: 4%;
-  background-color: black;
-  color: white;
+.component-dark {
+   background-color: black;
+   color: aliceblue;
 }
 
-.h1{
-  margin: 12%;
-  font-size: 10px;
-  transition: all 0.5s;
+.container1 {
+   display: flex;
 }
 
+.buttons, .content {
+   display: flex;
+   flex-direction: column;
+   margin: 3%;
+}
+
+.message {
+   position:sticky;
+   top: var(--navBarHeight);
+   width:100%;
+   background-color: black;
+   color: white;
+}
+
+.h1 {
+   margin: 12%;
+   font-size: 10px;
+   transition: all 0.5s;
+}
 .h1:hover{
-  scale: 1.1;
-
-  color: rgb(0, 162, 255);
+   scale: 1.1;
+   color: rgb(0, 162, 255);
 }
 
-.buton{
-  border: 2px solid rgb(8, 156, 137);
-  display: flex;
-  justify-content:center;
-  text-align: center;
-  align-items: center;
-  width: 250px;
-  height: 60px;
-  transition: all 0.5s;
-
+.buton {
+   border: 2px solid rgb(8, 156, 137);
+   display: flex;
+   justify-content:center;
+   text-align: center;
+   align-items: center;
+   width: 250px;
+   height: 60px;
+   transition: all 0.5s;
 }
 .buton:hover{
-  height: 60px;
-  cursor: pointer;
-  }
+   height: 60px;
+   cursor: pointer;
+}
