--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,23 @@
+/* 20px de margin del componente Footer  */
 :root {
   --navBarHeight: 12vh;
-  --footerHeight: 14vh;
+  --footerHeight: calc(25vh + 80px);
   --paddingBottom: 16vh;
   --navFilterHeight: 10vh;
+  --azul: #0000ff;
+  --celeste: #00ffff;
+  --rojo: #ff0000;
+  --rosado: #ff00ff;
+  --violeta: #800080;
+  --turquesa: rgba(27, 149, 155, 0.822);
+  --morado: rgba(102, 51, 153, 0.658);
 }
+
+/* @media screen and (max-width: 750px){
+    :root {
+        --footerHeight: calc(70vh);
+    }
+} */
 
 /*html {
    box-sizing: border-box;
