--- a/client/src/components/views/Profile/Profile.module.css
+++ b/client/src/components/views/Profile/Profile.module.css
@@ -8,6 +8,7 @@
     flex-wrap: wrap;
     gap: 30px;
     font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 20px;
     /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 }
 
@@ -17,11 +18,12 @@
     justify-content: flex-start;
     align-items: center;
     gap: 5px;
-    min-width: 250px;
+    min-width: 280px;
     height: fit-content;
     background-color: whitesmoke;
     border-radius: 15px;
     padding: 1%;
+    padding-top: 5%;
     box-shadow: 1px 1px 5px -1px rgba(128, 128, 128);
 }
 .infoProfile-dark {
@@ -49,7 +51,7 @@
     justify-content: flex-start;
     align-items: center;
     width: 70%;
-    min-width: 300px;
+    min-width: 320px;
     gap: 30px;
 }
 
