--- a/client/src/components/views/AdminPanel/AdminPanel.module.css
+++ b/client/src/components/views/AdminPanel/AdminPanel.module.css
@@ -1,82 +1,83 @@
 .component {
-   padding-bottom: var(--footerHeight);
-   margin-top: var(--navBarHeight);
-   min-height: calc(100vh - var(--navBarHeight));    
-   position: absolute;
-   width: 100%;
-   display: flex;
-   flex-direction: column; 
-   box-sizing: border-box;
-}
-
-.component-dark {
-   background-color: black;
-   color: aliceblue;
-}
-
-.h1{
-  margin: 12%;
-  font-size: 10px;
- 
-}
-
-.buton{
-  border: 2px solid rgb(8, 156, 137);
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
-  width: 250px;
-  height: 60px;
-  border-radius: 4px;
-  box-sizing: border-box;
-  animation: borderGradientAnimation1 4s linear infinite, borderGradientAnimation2 4s linear infinite, shadowGradientAnimation 4s linear infinite;
-}
-
-@keyframes borderGradientAnimation1 {
-  0%, 100% {
-    border-image: linear-gradient(to right, #ff0000, #0000ff) 1;
+    width: 100%;
+    margin-top: var(--navBarHeight);
+    display: flex;
+    flex-direction: row;
+    padding: 4% 0;
   }
-  25%, 75% {
-    border-image: linear-gradient(to right, #0000ff, #00ffff) 1;
-  }
-  50% {
-    border-image: linear-gradient(to right, #0000ff, #5b095b) 1;
-  }
-}
-
-@keyframes borderGradientAnimation2 {
-  0%, 100% {
-    border-image: linear-gradient(to left, black, #ff0000, #0000ff) 1;
-  }
-  25%, 75% {
-    border-image: linear-gradient(to left, #0000ff, black, #00ffff) 1;
-  }
-  50% {
-    border-image: linear-gradient(to left, #0000ff, #5b095b, black) 1;
-  }
-}
-
-@keyframes shadowGradientAnimation {
-  0%, 100% {
-    box-shadow: 0 0 10px rgba(255, 0, 0, 0.7);
-  }
-  25%, 75% {
-    box-shadow: 0 0 10px rgba(0, 0, 255, 0.7);
-  }
-  50% {
-    box-shadow: 0 0 10px rgba(0, 255, 255, 0.7);
-  }
-}
-
-.buton:hover{
   
-  transition:0.5s;
-  height: 60px; 
-  scale: 1.2;
-  background-color:rgb(76, 244, 221) ;
-  border: none;
-  color:black;
-  cursor: pointer;
-  animation:shadow-drop-center 0.4s linear both} 
-    @keyframes shadow-drop-center{0%{box-shadow:0 0 0 0 transparent}100%{box-shadow:0 0 20px 0 rgb(60, 247, 206)}}
+  .message{
+    position:sticky;
+    top:12%;
+    width:100%;
+    height: 4%;
+    background-color: black;
+    color: white;
+  }
+  
+  .h1{
+    margin: 12%;
+    font-size: 10px;
+   
+  }
+  
+  .buton{
+    border: 2px solid rgb(8, 156, 137);
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    width: 250px;
+    height: 60px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    animation: borderGradientAnimation1 4s linear infinite, borderGradientAnimation2 4s linear infinite, shadowGradientAnimation 4s linear infinite;
+  }
+  
+  @keyframes borderGradientAnimation1 {
+    0%, 100% {
+      border-image: linear-gradient(to right, #ff0000, #0000ff) 1;
+    }
+    25%, 75% {
+      border-image: linear-gradient(to right, #0000ff, #00ffff) 1;
+    }
+    50% {
+      border-image: linear-gradient(to right, #0000ff, #5b095b) 1;
+    }
+  }
+  
+  @keyframes borderGradientAnimation2 {
+    0%, 100% {
+      border-image: linear-gradient(to left, black, #ff0000, #0000ff) 1;
+    }
+    25%, 75% {
+      border-image: linear-gradient(to left, #0000ff, black, #00ffff) 1;
+    }
+    50% {
+      border-image: linear-gradient(to left, #0000ff, #5b095b, black) 1;
+    }
+  }
+  
+  @keyframes shadowGradientAnimation {
+    0%, 100% {
+      box-shadow: 0 0 10px rgba(255, 0, 0, 0.7);
+    }
+    25%, 75% {
+      box-shadow: 0 0 10px rgba(0, 0, 255, 0.7);
+    }
+    50% {
+      box-shadow: 0 0 10px rgba(0, 255, 255, 0.7);
+    }
+  }
+  
+  .buton:hover{
+    
+    transition:0.5s;
+    height: 60px; 
+    scale: 1.2;
+    background-color:rgb(76, 244, 221) ;
+    border: none;
+    color:black;
+    cursor: pointer;
+    animation:shadow-drop-center 0.4s linear both} 
+      @keyframes shadow-drop-center{0%{box-shadow:0 0 0 0 transparent}100%{box-shadow:0 0 20px 0 rgb(60, 247, 206)}}
