--- a/client/src/components/views/Shop/Shop.module.css
+++ b/client/src/components/views/Shop/Shop.module.css
@@ -31,10 +31,10 @@
  }
  
  .sectionBanner {
-    /* display: flex;
-    align-items: center; */
-    height: 25vh;
-    left: 0;
+    display: flex;
+    align-items: center;    
+    min-height: var(--navBarHeight);
+    /* left: 0; */
     width: 100%;
     /* padding-bottom: 25%; */
     background: linear-gradient(to right, rgba(0, 180, 204, 0.623) 0%, rgba(161,247,190,1) 100%);
@@ -255,10 +255,10 @@
  }
 
 
- /* ----------- RESPONSIVE --------------- */
+/* ----------- RESPONSIVE --------------- */
 
- @media screen and (max-width: 750px) {
-    .component {
-        padding-bottom: 0;
-    }
+@media screen and (max-width: 750px) {
+   .component {
+      padding-bottom: 0;
+   }
 }
