--- a/client/src/components/views/AdminPanel/Categories.module.css
+++ b/client/src/components/views/AdminPanel/Categories.module.css
@@ -1,13 +1,15 @@
 .contain {
   color: rgb(0, 0, 0);
-  display: flex;
   width: 100%;
   justify-content:center ;
   animation: blur-in 0.4s linear both;
-  flex-direction: row;
-  margin-left: 150%;
-  padding: 5%;
-  background-color: rgba(0, 0, 255, 0.31);
+  padding: 3%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 2px 2px;
+ 
+ 
 }
 @keyframes blur-in {
   0% {
@@ -19,16 +21,7 @@
     opacity: 1;
   }
 }
-.item {
-  display: flex;
-  justify-content: center;
-  justify-items: center;
-  align-items: center;
-}
 
-.button{
-  color: rgb(10, 10, 10);
-}
 
 /* Estilos para los botones de eliminar */
 /* Personaliza el color según tus preferencias */
@@ -58,3 +51,43 @@
   75% { transform: rotate(-10deg); }
 }
 
+.Tabla {
+  width: 100%;
+  margin-bottom: 1rem;
+  color: #000000;
+  border-collapse: collapse;
+}
+
+/* Estilos para el encabezado de la tabla */
+.Tabla thead th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #8e13c3;
+  background-color:#bb37f494;
+  padding: 15px;
+  text-align: center;
+}
+
+/* Estilos para las celdas del cuerpo de la tabla */
+.Tabla tbody td {
+  padding: 15px;
+  text-align: center;
+  border-bottom: 1px solid  #8e13c3;
+}
+
+/* Estilos para las celdas del cuerpo de la tabla en la última fila */
+/* Si no deseas bordes en la última fila, puedes omitir este bloque */
+.Tabla tbody tr:last-child td {
+  border-bottom: 1px solid  #8e13c3;
+}
+
+/* Estilos para las celdas del cuerpo de la tabla en la primera columna */
+.Tabla tbody td:first-child {
+  border-left: 1px solid #8e13c3;
+}
+
+/* Estilos para las celdas del cuerpo de la tabla en la última columna */
+.Tabla tbody td:last-child {
+  border-right: 1px solid  #8e13c3;
+}
+
+/* Estilos para los botones dentro de las celdas de la tabla */
