--- a/client/src/components/views/AdminPanel/Tecnology.module.css
+++ b/client/src/components/views/AdminPanel/Tecnology.module.css
@@ -1,42 +1,117 @@
+/* Agrega tus estilos existentes aquí */
 
-  .tableHover {
-    
-    width: 100%;
-    border-collapse: separate;
-  }
-  
-  .th .td {
-    padding: 8px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-    
+.contenedor {
+  margin-bottom: 1rem;
+  width: 100%;
 
-  }
+}
+.h1{
+  margin-bottom: 1rem;
+
+}
+.form{
+  margin-bottom: 2rem;
+}
   
-  .th {
-    
-    background-color:#1eced19d;
-    font-weight: bold;
-    
-  }
+.Tabla {
+ display: grid;
+ gap: 2px 2px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr; 
+ width: 100%; 
+  margin-bottom: 2rem;
+  color: #212529;
+  border-collapse: collapse;
+}
+
+/* Estilos para el encabezado de la tabla */
+.Tabla thead th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #dee2e6;
+  background-color: #ffdddd;
+  padding: 15px;
+  text-align:center;
+
+}
+
+/* Estilos para las celdas del cuerpo de la tabla */
+.Tabla tbody td {
+  padding: 15px;
+  text-align:center;
+  vertical-align: middle;
+  border-bottom: 1px solid #dee2e6;
   
-  /* Estilos para los botones dentro de la tabla */
-   .button {
-    padding: 5px 10px;
-    border: none;
-    background-color:#005f6b;
-    color: #fff;
-    cursor: pointer;
-    transition: background-color 0.2s;
-  }
+}
+
+/* Estilos para las celdas del cuerpo de la tabla en la última fila */
+/* Si no deseas bordes en la última fila, puedes omitir este bloque */
+.Tabla tbody tr:last-child td {
+  border-bottom: none;
   
-  .button:hover {
-    background-color: #c82333;
-    }
-  /* Estilo para los botones en las celdas de la última columna */
-  td:last-child {
-    
-    text-align: center;
-    
-  }
+}
+
+/* Estilos para las celdas del cuerpo de la tabla en la primera columna */
+.Tabla tbody td:first-child {
+  border-left: 1px solid #dee2e6;
+  
+}
+
+/* Estilos para las celdas del cuerpo de la tabla en la última columna */
+.Tabla tbody td:last-child {
+  border-right: 1px solid #dee2e6;
+  
+}
+
+/* Estilos para los botones dentro de las celdas de la tabla */
+.Tabla td button {
+  margin-right: 5px;
+  cursor: pointer;
+  border: none;
+  color: rgb(0, 0, 0);
+  padding: 5px 10px;
+}
+
+/* Estilos para los botones de eliminar */
+/* Personaliza el color según tus preferencias */
+.modificarButton{
+  background-color:rgba(255, 255, 0, 0.505);
+border-radius: 25%;
+  /* border: 1px solid red; */
+  border: none;
+  transition: transform 0.2s ease;
+  
+}
+.modificarButton:hover{
+  animation: shake 0.5s infinite;
+  cursor: pointer;
+  scale: 1.1;
+
+}
+.mod{
+  fill:#e1d200;
+}
+.deleteButton {
+  background-color: #ffdddd;
+  /* border: 1px solid red; */
+  border: none;
+  transition: transform 0.2s ease;
+  border-radius: 15%;
+  
+}
+.deleteButton:hover{
+  scale: 1.1;
+  animation: shake 0.5s infinite;
+  cursor: pointer;
+}
+.bin {
+  height: 1.5rem;
+  width: 1.5rem;
+  fill: red;
+}
+@keyframes shake {
+  0%, 100% { transform: rotate(0deg); }
+  25% { transform: rotate(-10deg); }
+  50% { transform: rotate(10deg); }
+  75% { transform: rotate(-10deg); }
+}
 
