--- a/client/src/components/views/Profile/ProfileComponents/PaymentOrders/PaymentOrders.module.css
+++ b/client/src/components/views/Profile/ProfileComponents/PaymentOrders/PaymentOrders.module.css
@@ -32,6 +32,24 @@
 .payment-dark {
     background-color: #111111;
 }
+.paymentRejected {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5px;
+    width: 90%;
+    margin: 10px 0 10px 0;
+    padding: 10px;
+    min-width: 300px;
+    background-color: rgb(207, 192, 192);
+    box-shadow: 2px 2px 5px -3px black;
+    border: 1px solid rgb(138, 0, 0);
+    overflow-wrap: break-word;
+    position: relative;
+}
+.paymentRejected-dark {
+    background-color: #2c2525;
+}
 
 .payHeader {
     width: 95%;
