--- a/client/src/components/views/AdminPanel/Tecnology.module.css
+++ b/client/src/components/views/AdminPanel/Tecnology.module.css
@@ -28,7 +28,7 @@
 .Tabla thead th {
   vertical-align: bottom;
   border-bottom: 2px solid #dee2e6;
-  background-color: #ffdddd;
+  background-color:rgba(255, 68, 0, 0.653);
   padding: 15px;
   text-align:center;
 
