--- a/client/src/components/views/AdminPanel/Suscriptions.module.css
+++ b/client/src/components/views/AdminPanel/Suscriptions.module.css
@@ -18,25 +18,24 @@
   }
   
   /* Estilos para el encabezado de la tabla */
-  .Tabla thead th {
-    vertical-align: bottom;
-    border-bottom: 2px solid #dee2e6;
-    background-color: #2678d06c;
-    padding: 15px;
-    text-align:center;
-  
+  .title {
+   display: flex;
+   padding-right: 20px;
+   width: 369.7%;
+   justify-content: space-around;
+   background-color: aqua;
+align-content: center;
   }
   
   /* Estilos para las celdas del cuerpo de la tabla */
   .Tabla tbody td {
-    
     padding-left: 20px;
-
     padding-right: 20px;
     text-align:center;
     vertical-align: middle;
     border-bottom: 1px solid #dee2e6;
-     justify-content: flex-start;
+     justify-content:center;
+     align-items: center;
   }
   
   /* Estilos para las celdas del cuerpo de la tabla en la última fila */
@@ -72,3 +71,45 @@
     background-color: blue;
     color:bisque;
   }
+  .modificarButton{
+    background-color:rgba(255, 255, 0, 0.505);
+  border-radius: 25%;
+    /* border: 1px solid red; */
+    border: none;
+    transition: transform 0.2s ease;
+    
+  }
+  .modificarButton:hover{
+    animation: shake 0.5s infinite;
+    cursor: pointer;
+    scale: 1.1;
+  
+  }
+  .mod{
+    fill:#e1d200;
+  }
+  .deleteButton {
+    background-color: #ffdddd;
+    /* border: 1px solid red; */
+    border: none;
+    transition: transform 0.2s ease;
+    border-radius: 15%;
+    
+  }
+  .deleteButton:hover{
+    scale: 1.1;
+    animation: shake 0.5s infinite;
+    cursor: pointer;
+  }
+  .bin {
+    height: 1.5rem;
+    width: 1.5rem;
+    fill: red;
+  }
+  @keyframes shake {
+    0%, 100% { transform: rotate(0deg); }
+    25% { transform: rotate(-10deg); }
+    50% { transform: rotate(10deg); }
+    75% { transform: rotate(-10deg); }
+  }
+  
