--- a/client/src/components/views/AdminPanel/Categories.module.css
+++ b/client/src/components/views/AdminPanel/Categories.module.css
@@ -1,15 +1,16 @@
 .contain {
-  color: rgb(0, 0, 0);
   width: 100%;
   justify-content:center ;
-  animation: blur-in 0.4s linear both;
+  /* animation: blur-in 0.4s linear both; */
+  animation: blur-in 0.4s ease;
   padding: 3%;
-  display: grid;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  /* display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr; */
   gap: 2px 2px;
- 
- 
 }
 @keyframes blur-in {
   0% {
@@ -52,10 +53,9 @@
 }
 
 .Tabla {
-  width: 100%;
+  width: 30vw;
   margin-bottom: 1rem;
-  color: #000000;
-  border-collapse: collapse;
+  border-collapse:collapse;
 }
 
 /* Estilos para el encabezado de la tabla */
@@ -91,3 +91,23 @@
 }
 
 /* Estilos para los botones dentro de las celdas de la tabla */
+
+.button{
+  background-color:  #8e13c3;
+  color:white;
+  width: 59%;
+}
+.button:hover{
+  cursor: pointer;
+}
+
+.input{
+  width: 100%;
+}
+ 
+.inputSpan {
+  display: flex;
+  gap: 2%;
+  width: 100%;
+  height: 2rem;
+}
