--- a/client/src/components/views/AdminPanel/Courses.module.css
+++ b/client/src/components/views/AdminPanel/Courses.module.css
@@ -6,14 +6,12 @@
   grid-template-rows: 1fr 1fr 1fr;
   gap: 2px 2px;
   width: 100%;
-
 }
 
 
 .Tabla {
  width: 100%; 
   margin-bottom: 1rem;
-  color: #212529;
   border-collapse: collapse;
   background-color: #c30c0c0e;
 }
@@ -22,7 +20,8 @@
 .Tabla thead th {
   vertical-align: bottom;
   border-bottom: 2px solid #dee2e6;
-  background-color: #c30c0c7a;
+  background-color: rgb(11, 138, 138);
+  color:white;
   padding: 15px;
   text-align:center;
 
@@ -32,8 +31,9 @@
 .Tabla tbody td {
   padding: 15px;
   text-align:center;
+  background: rgba(11, 138, 138, 0.048);
   vertical-align: middle;
-  border-bottom: 1px solid #c30c0c7a;
+  border-bottom: 1px solid  rgba(11, 138, 138, 0.144);
   
 }
 
@@ -46,13 +46,13 @@
 
 /* Estilos para las celdas del cuerpo de la tabla en la primera columna */
 .Tabla tbody td:first-child {
-  border-left: 1px solid #c30c0c7a;
+  border-left: 1px solid  rgb(11, 138, 138);
   
 }
 
 /* Estilos para las celdas del cuerpo de la tabla en la última columna */
 .Tabla tbody td:last-child {
-  border-right: 1px solid #c30c0c7a;
+  border-right: 1px solid  rgb(11, 138, 138);
   
 }
 
@@ -61,7 +61,6 @@
   margin-right: 5px;
   cursor: pointer;
   border: none;
-  color: rgb(0, 0, 0);
   padding: 5px 10px;
 }
 
@@ -109,3 +108,45 @@ border-radius: 25%;
   75% { transform: rotate(-10deg); }
 }
 
+
+
+.coursesForm{
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content:center;
+  width: 100%;
+  border:2px solid white;
+  padding: 20px;
+  background-color: rgb(11, 138, 138);
+}
+
+.h1{
+  display: flex;
+  justify-content: flex-start;
+  font-size: 20px;
+  padding:5px;
+  color: white;
+  margin-left: 10%;
+  
+}
+.input{
+  height: 20px;
+}
+.button{
+
+ background-color:rgba(255, 255, 255, 0.637);
+}
+.button:hover{
+  cursor: pointer;
+  color: rgb(30, 167, 177);
+}
+
+.subirimagen{
+  color:white;
+  padding: 20px;
+  width: 200px;
+}
+.tecnologias{
+  margin-left: -10%;
+}
