--- a/client/src/components/views/AdminPanel/Products.module.css
+++ b/client/src/components/views/AdminPanel/Products.module.css
@@ -92,3 +92,44 @@
   50% { transform: rotate(10deg); }
   75% { transform: rotate(-10deg); }
 }
+
+.Form{
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content:center;
+  width: 100%;
+  border:2px solid white;
+  padding: 20px;
+  background-color: rgb(11, 138, 138);
+}
+
+.h1{
+  display: flex;
+  justify-content: flex-start;
+  font-size: 20px;
+  padding:5px;
+  color: white;
+  margin-left: 10%;
+  
+}
+.input{
+  height: 20px;
+}
+.button{
+
+ background-color:rgba(255, 255, 255, 0.637);
+}
+.button:hover{
+  cursor: pointer;
+  color: rgb(30, 167, 177);
+}
+
+.subirimagen{
+  color:white;
+  padding: 20px;
+  width: 200px;
+}
+.extra{
+  margin-left: -10%;
+}
